--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -31,7 +31,7 @@
                 <!--<ion-button expand="full" (click)="IniciarSesion()">Iniciar sesión</ion-button>-->
                 <button mat-button color="primary" (click)="IniciarSesion()">Ingresar</button>              
                 <!--<ion-button expand="full" color="danger" [routerLink]="['/recuperar-contrasena']">Recuperar contraseña</ion-button>-->
-                <button mat-button color="warn" [routerLink]="['/recuperar-contrasena']">Recuperar contraseña</button>            
+                <button mat-button color="warn" [routerLink]="['/recuperar-contrasena']">Recuperar contraseña.</button>            
             </ion-col>
           </ion-row>
         </ion-card-content>
