--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -18,6 +18,9 @@
   <ion-row>
     <ion-col>
       <h1>Bienvenido: {{datos.usuario}}</h1>
+      <br>
+      <br>
+      <ion-button (click)="registarAsistencia()">Registrar Asistencia</ion-button>
     </ion-col>
   </ion-row>
 </ion-content>
